--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ VERSION_CODE=1
 GROUP=com.yqritc
 ARTIFACT_ID=android-scalableimageview
 
-COMPILE_SDK_VERSION=22
-BUILD_TOOLS_VERSION=22
-TARGET_SDK_VERSION=22
-MIN_SDK_VERSION=9
+COMPILE_SDK_VERSION=26
+BUILD_TOOLS_VERSION=26.0.2
+TARGET_SDK_VERSION=26
+MIN_SDK_VERSION=16
 
 POM_DESCRIPTION=Android ImageView having the variety of scale types
 POM_URL=https://github.com/yqritc/Android-ScalableImageView
@@ -20,3 +20,5 @@ POM_DEVELOPER_ID=yqritc
 POM_DEVELOPER_NAME=yqritc
 POM_DEVELOPER_EMAIL=yqritc@gmail.com
 ISSUE_URL=https://github.com/yqritc/Android-ScalableImageView/issues
+android.useAndroidX=true
+android.enableJetifier=true
