--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion COMPILE_SDK_VERSION as int
-    buildToolsVersion BUILD_TOOLS_VERSION
+    compileSdkVersion 26
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "com.yqritc.scalableimageview.sample"
-        minSdkVersion MIN_SDK_VERSION as int
-        targetSdkVersion TARGET_SDK_VERSION as int
-        versionCode VERSION_CODE as int
-        versionName VERSION_NAME
+        minSdkVersion 16
+        targetSdkVersion 26
+        versionCode 1
+        versionName '1.0'
     }
     buildTypes {
         release {
@@ -20,8 +20,9 @@ android {
 }
 
 dependencies {
-    compile project(':library')
+    implementation project(path: ':library')
+ //   implementation project(':library')
 //    compile 'com.yqritc:android-scalableimageview:1.0.0'
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.android.support:recyclerview-v7:22.2.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
